# simbuilder

./: .env  .env.backup  .env.session.backup  .env.template  .env.test  .gitignore  .port_allocations.json  .pre-commit-config.yaml  LICENSE  README.md  STATUS.md  STUB_DISCOVERY_COMMANDS.md  STUB_GRAPH_INTEGRATION.md  docker-compose.yaml  github_issue_mypy_to_pyright.md  issue_body.txt  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  stub_PR_note.txt  tasks.py
.devcontainer/: devcontainer.json
.github/: stub_PR_note.txt
.github/Copilot-History/: prompt_history_2025-06-05_10-00_session.md  prompt_history_2025-06-05_17-07_001.md  prompt_history_2025-06-06_23-01_chat.md  prompt_history_2025-06-07_16-16_architect.md  prompt_history_2025-06-07_22-12_code.md  prompt_history_2025-06-09_02-36_chat.md  prompt_history_2025-06-09_02-53_code.md  prompt_history_2025-06-09_04-43_code.md  prompt_history_2025-06-10_03-23_code.md  prompt_history_2025-06-10_16-36_session1.md  prompt_history_2025-06-10_19-35_session.md  prompt_history_2025-06-10_20-00_code.md  prompt_history_2025-06-11_00-09_code.md  prompt_history_2025-06-12_14-21_code.md  prompt_history_2025-06-12_14-30_${SESSION_ID}.md  prompt_history_2025-06-12_16-04_code.md  prompt_history_2025-06-13_22-39_code.md  prompt_history_PRE_2025-06-05.md  shell_history_2025-06-05_17-07_001.md  shell_history_2025-06-06_14-10_session.md  shell_history_2025-06-06_15-23_session.md  shell_history_2025-06-07_06-31_chat.md  shell_history_2025-06-07_17-08_code.md  shell_history_2025-06-09_03-30_code.md  shell_history_2025-06-09_04-43_code.md  shell_history_2025-06-10_03-23_code.md  shell_history_2025-06-10_16-36_session1.md  shell_history_2025-06-10_19-35_session.md  shell_history_2025-06-10_20-00_code.md  shell_history_2025-06-11_00-09_code.md  shell_history_2025-06-12_14-21_code.md  shell_history_2025-06-12_16-04_code.md  shell_history_2025-06-13_00-24_code.md  shell_history_2025-06-13_22-39_code.md
.roo/: mcp.json
.roo/rules/: 01-general-behavior.md
.roo/rules-code/: 01-system-behavior.md  02-project-methodology.md  03-coding-guidelines.md  04-testing-requirements.md  05-code-organization.md  06-github-workflow.md  07-history-maintenance.md
.sessions/6f794f1c-d7f4-45d8-803b-61fb8a56bf6f/: metadata.json  ports.json
.sessions/79abbcd0-ce22-4720-a6b4-3596f1121e03/: metadata.json
.sessions/9dd6e729-2ea9-4eae-9df9-635d2dbc4f84/: metadata.json
.sessions/a5a5c442-196c-419d-b1d4-e23b5a2afc44/: metadata.json
.sessions/a6bf03f9-6915-4c49-b777-7dbce3b2af07/: metadata.json  ports.json
.sessions/b0ff0ba3-c09a-4295-9809-100d6838e895/: metadata.json  ports.json
.sessions/d421cc96-b8e8-47e3-9be7-ac6a4b123ace/: metadata.json
.sessions/ef7bea21-af3f-4aca-a667-c7beb29ce4d2/: metadata.json
docs/: TODO_pydantic.md  phase7-24_roadmap.md  tenant_discovery_demo.md  tenant_discovery_plan.md
simbuilder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
specs/: INTERFACE_CONSISTENCY_REPORT.md  QandA.md  SimBuilderDesign.md  SimBuilderOverview.md  TenantDiscoveryMVP.md  initialprompt.md
specs/components/00-scaffolding/: scaffolding.md
specs/components/01-graph-database-service/: graph-database-service.md
src/clarifier_agent/: __init__.py  agent.py  cli.py  models.py
src/scaffolding/: __init__.py  cli.py  config.py  exceptions.py  logging.py  port_manager.py  session.py
src/simbuilder_api/: __init__.py  cli.py  dependencies.py  main.py
src/simbuilder_api/auth/: __init__.py  (+1 more)
src/simbuilder_graph/: __init__.py  cli.py  models.py  service.py
src/simbuilder_llm/: __init__.py  cli.py  client.py  exceptions.py
src/simbuilder_servicebus/: __init__.py  cli.py  client.py  models.py  progress_notifier.py  topics.py
src/simbuilder_specs/: __init__.py  cli.py  git_repository.py  models.py  spec_validator.py  template_loader.py
src/tenant_discovery/: __init__.py  cli.py  config.py
tests/: __init__.py  conftest.py
tests/clarifier_agent/: test_agent.py  test_cli.py
tests/scaffolding/: __init__.py  test_config.py  test_port_manager.py  test_session.py  test_session_cli.py
tests/simbuilder_api/: __init__.py  test_cli.py  test_health_router.py  test_jwt_handler.py  test_session_middleware.py
tests/simbuilder_graph/: __init__.py  test_graph.py
tests/simbuilder_llm/: __init__.py  test_cli.py  test_client.py  test_prompt_loader.py
tests/simbuilder_servicebus/: __init__.py  test_models.py  test_progress_notifier.py  test_topics.py
tests/simbuilder_specs/: __init__.py  test_cli.py  test_git_repository.py  test_models.py  test_template_loader.py
tests/tenant_discovery/: __init__.py  test_cli.py  test_cli_discovery.py  test_config.py  test_graph.py
(+38 files in other folders)
